@@ -379,16 +379,16 @@ commandMap = {
         "keyboard": keyboard.FC3_Keyboard,
         "lang": lang.FC3_Lang,
         "logging": logging.FC6_Logging,
-        "logvol": logvol.FC4_LogVol,
+        "logvol": logvol.F9_LogVol,
         "mediacheck": mediacheck.FC4_MediaCheck,
         "monitor": monitor.FC6_Monitor,
         "multipath": multipath.FC6_MultiPath,
         "network": network.F8_Network,
         "nfs": method.FC6_Method,
         "part": partition.FC4_Partition,
-        "partition": partition.FC4_Partition,
+        "partition": partition.F9_Partition,
         "poweroff": reboot.FC6_Reboot,
-        "raid": raid.F7_Raid,
+        "raid": raid.F9_Raid,
         "reboot": reboot.FC6_Reboot,
         "repo": repo.F8_Repo,
         "rootpw": rootpw.F8_RootPw,
@@ -644,11 +644,11 @@ dataMap = {
         "DeviceData": device.F8_DeviceData,
         "DmRaidData": dmraid.FC6_DmRaidData,
         "IscsiData": iscsi.FC6_IscsiData,
-        "LogVolData": logvol.FC4_LogVolData,
+        "LogVolData": logvol.F9_LogVolData,
         "MultiPathData": multipath.FC6_MultiPathData,
         "NetworkData": network.F8_NetworkData,
-        "PartData": partition.FC4_PartData,
-        "RaidData": raid.F7_RaidData,
+        "PartData": partition.F9_PartData,
+        "RaidData": raid.F9_RaidData,
         "RepoData": repo.F8_RepoData,
         "UserData": user.F8_UserData,
         "VolGroupData": volgroup.FC3_VolGroupData,
